# reaper-ccs

./: .gitignore  CMakeLists.txt  build.sh  meson.build  oldmakelists.txt
example-configs/: readme.md
example-configs/ccs/: config.yml  control_types.yml
example-configs/ccs/controllers/: novation-sl-mk3.yml
example-configs/ccs/fx_plugins/: juno.yml  vsti_tal_noisemaker_tal_togu_audio_line.yml  vsti_tal_u_no_lx_v2_tal_togu_audio_line.yml
example-configs/ccs/pcc/: session.yml
example-configs/ccs/pcc/pages/: _default.yml  page1.yml
example-configs/ccs/sessions/pcc/: session.yml
example-configs/ccs/sessions/pcc/pages/: _default.yml  page1.yml  page2.yml  page3.yml  page8.yml
src/: Action.cpp  Ccs.cpp  Ccs.h  CcsAction.cpp  CcsConfig.cpp  CcsMidiControlElement.cpp  CcsMidiController.cpp  CcsMidiEventType.cpp  CcsPage.cpp  CcsSession.cpp  CcsUtil.cpp  CcsUtil.h  MidiControlElement.cpp  MidiControlElement.h  MidiControlElementMapping.cpp  MidiControlElementMapping.h  MidiControlEvent.h  MidiController.cpp  MidiController.h  MidiEventSubscriber.cpp  MidiEventSubscriber.h  MidiEventType.cpp  Page.cpp  Page.h  ReaperActions.cpp  ReaperActions.h  Session.cpp  Session.h  Util.cpp  Util.h  Variables.cpp  Variables.h  WDL  _old_csurf_slmk3.cpp  class-dependencies.txt  control_surface.cpp  control_surface_ui.cpp  csurf.h  csurf_novation_slmk3.cpp  entrypoint.cpp  (+8 more)
src/actions/: Action.cpp  Action.h  ActionInvocation.cpp  ActionInvocation.h  ActionProvider.cpp  ActionProvider.h  Actions.cpp  Actions.h  ActionsManager.cpp  ActionsManager.h
src/ccs/: Ccs.cpp  Ccs.h  CcsException.cpp  CcsException.h  Ccs_ControlSurface.cpp  Ccs_ControlSurface.h  FxPlugins.cpp  FxPlugins.h  Page.cpp  Page.h  ReaperActions.cpp  ReaperActions.h  Session.cpp  Session.h  Test.cpp  Util.cpp  Util.h  Variables.cpp  Variables.h  globals.cpp
src/ccs/actions/: Action.cpp  Action.h  ActionInvocation.cpp  ActionInvocation.h  ActionProvider.cpp  ActionProvider.h  ActionsManager.cpp  ActionsManager.h  CompositeAction.cpp  CompositeAction.h
src/ccs/config/: BaseConfig.cpp  BaseConfig.h  CompositeActionConfig.cpp  CompositeActionConfig.h  FxPluginConfig.cpp  FxPluginConfig.h  MappingConfig.cpp  MappingConfig.h  MidiControllerConfig.cpp  MidiControllerConfig.h  PageConfig.h  SessionConfig.cpp  SessionConfig.h
src/ccs/midi/: MidiControlElement.cpp  MidiControlElement.h  MidiControlElementAction.cpp  MidiControlElementAction.h  MidiControlElementMapping.cpp  MidiControlElementMapping.h  MidiControlEvent.cpp  MidiController.cpp  MidiController.h  MidiEventSubscriber.cpp  MidiEventSubscriber.h  MidiEventType.h  RadioGroup.cpp  RadioGroup.h
src/config/: BaseConfig.cpp  BaseConfig.h  CcsConfig.cpp  CcsConfig.h  GlobalConfig.cpp  GlobalConfig.h  MidiControllerConfig.cpp  MidiControllerConfig.h  PageConfig.cpp  PageConfig.h  SessionConfig.cpp  SessionConfig.h
src/control-surfaces/: ccs_control_surface.cpp
src/reaper/: ControlSurface.cpp  ControlSurface.h  FxParameterChangedSubscription.cpp  FxParameterChangedSubscription.h  IReaperControlSurface.h  ReaperApi.cpp  ReaperApi.h  ReaperDataTracker.cpp  ReaperDataTracker.h  ReaperEventSubscriber.cpp  ReaperEventSubscriber.h  ThreadedMidiOutput.cpp  ThreadedMidiOutput.h  csurf.h  localize-import.h  readme.md  reaper_extension.cpp  reaper_plugin.h  reaper_plugin_functions.h  res.rc  res.rc_mac_dlg  resource.h
src/reaper-actions/: ccs_write_fx_plugin_config.cpp
src/reaper-api/: ControlSurfaceEventSubscription.cpp  ControlSurfaceEventSubscription.h  FxParameterChangedSubscription.cpp  FxParameterChangedSubscription.h  FxPresetChangedSubscription.cpp  FxPresetChangedSubscription.h  ReaperApi.cpp  ReaperApi.h  ReaperDataTracker.cpp  ReaperDataTracker.h  ReaperEventSubscriber.cpp  ReaperEventSubscriber.h
